k3s/manifests/network-policies/homepage/homepage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-zabbix-ingress-homepage
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: homepage
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.1.0/24
      ports:
        - protocol: TCP
          port: 3000
